--- a/roles/immich/defaults/main.yml
+++ b/roles/immich/defaults/main.yml
@@ -9,14 +9,5 @@ immich_postgres_path: "/tank/immich/postgres"
 immich_config_folder: "{{ config_root }}/immich"
 
 # Port Configuration
-immich_http_port: 2283
-
-# Database Configuration
-immich_db_name: "immich"
-immich_db_username: "postgres"
-immich_uid: 1000
-immich_gid: 1000
-
-# Machine Learning Service Configuration (remote)
-immich_ml_hostname: "{{ hostvars['ailab-ubuntu'].ansible_host }}"
-immich_ml_port: 3003
+immich_http_port: "{{ ports.homelab_nuc.immich_web }}"
+immich_ml_port: "{{ ports.ailab_ubuntu.immich_ml }}"
