--- a/roles/prunemate/tasks/main.yml
+++ b/roles/prunemate/tasks/main.yml
@@ -8,7 +8,7 @@
           image: anoniemerd/prunemate:latest
           container_name: prunemate
           ports:
-            - "7676:8080"
+            - "{{ ports.homelab_nuc.prunemate }}:8080"
           volumes:
             - /var/run/docker.sock:/var/run/docker.sock
             - "{{ prunemate_config_path }}:/config"
