--- a/roles/wyoming_openai/defaults/main.yml
+++ b/roles/wyoming_openai/defaults/main.yml
@@ -8,7 +8,7 @@ speaches_container_name: speaches
 chatterbox_container_name: chatterbox-tts
 
 # Wyoming OpenAI Gateway (Wyoming protocol) - SPEACHES (STT + TTS)
-wyoming_openai_external_port: 10300
+wyoming_openai_external_port: "{{ ports.ailab_ubuntu.wyoming_openai }}"
 wyoming_openai_internal_port: 10300
 
 wyoming_uri: "tcp://0.0.0.0:{{ wyoming_openai_internal_port }}"
@@ -26,7 +26,7 @@ tts_openai_url: "http://speaches:{{ speaches_internal_port }}/v1"
 tts_model: "systemofapwne/piper-de_DE-glados-high"
 
 # SPEACHES (Whisper STT)
-speaches_external_port: 8001
+speaches_external_port: "{{ ports.ailab_ubuntu.speaches }}"
 speaches_internal_port: 8000
 
 # TTS Configuration
@@ -37,7 +37,7 @@ tts_speed: "1.0"
 # wyoming_chatterbox config
 
 # Wyoming OpenAI Gateway - Chatterbox (TTS only)
-wyoming_openai_chatterbox_external_port: 10301
+wyoming_openai_chatterbox_external_port: "{{ ports.ailab_ubuntu.wyoming_chatterbox }}"
 wyoming_openai_chatterbox_internal_port: 10301
 wyoming_chatterbox_uri: "tcp://0.0.0.0:{{ wyoming_openai_chatterbox_internal_port }}"
 
@@ -47,11 +47,11 @@ chatterbox_voices: "default Merkel Sabine Adolf"
 
 
 # Chatterbox TTS
-chatterbox_tts_external_port: 4123
+chatterbox_tts_external_port: "{{ ports.ailab_ubuntu.chatterbox_tts }}"
 chatterbox_tts_internal_port: 4123
 
 # Chatterbox Frontend UI
-chatterbox_frontend_external_port: 4321
+chatterbox_frontend_external_port: "{{ ports.ailab_ubuntu.chatterbox_ui }}"
 chatterbox_frontend_internal_port: 80
 
 huggingface_cache_folder: "{{ config_root }}/wyoming-openai/huggingface-cache"
