--- a/roles/monitoring/defaults/main.yml
+++ b/roles/monitoring/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # Semaphore Configuration
-semaphore_port_internal: 3000
+semaphore_port_internal: "{{ ports.homelab_nuc.semaphore }}"
 
 # Data folders
 semaphore_data_folder: "{{ config_root }}/semaphore"
