--- a/roles/waha/defaults/main.yml
+++ b/roles/waha/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 waha_image: "devlikeapro/waha:latest"
 waha_container_name: "waha"
-waha_port: 3000
+waha_port: "{{ ports.homelab_nuc.waha }}"
 waha_config_folder: "{{ config_root }}/waha"
 waha_sessions_folder: "{{ waha_config_folder }}/sessions"
 waha_engine: "WEBJS" # Options: WEBJS (Puppeteer) or NOWEB (Baileys)
